Add S3 retention helpers, wire document storage cleanup to remove object locks